--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -14,6 +14,7 @@
   .informacoes .descricao {
     width: 60%;
     text-align: center;
+    font-size: 20px;
   }
 }
 
@@ -23,7 +24,7 @@
   }
 
   .informacoes .descricao {
-    width: 100%;
+    display: none;
   }
 
   .menu-lateral {
